<resources>

    <string name="app_name">Agri On</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    ]
    <string name="title_events">Events</string>
    <string name="title_beneficiary">Beneficiaries</string>
    <string name="title_service_req">Service Request</string>

    <string name="title_news_add">Add News</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="share_message">Hi I am using FarmConenct It is very good and useful. https://play.google.com/store/apps/details?id=com.patelheggere.ktdcl</string>
    <string name="share_us_via">Share Via</string>
    <string name="title_activity">Activities</string>
    <string name="registration">Registration</string>
    <string name="mobile">Enter Mobile no</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone No.</string>
    <string name="father_name">Father Name</string>
    <string name="enter_village">Village/Tanda:</string>
    <string name="gp">Panchayath:</string>
    <string name="enter_electionid">Enter Voter ID(optional)</string>
    <string name="admin">Admin</string>
    <string name="enrol">Enrol</string>
    <string name="contact_us">Contact us</string>
    <string name="change_lang">Change Language</string>
    <string name="logout">Logout</string>
    <string name="service_request">Service Request</string>
    <string name="enter_desc">Write your request / complaint</string>
    <string name="enter_pwd">Enter Password</string>
    <string name="title_enrol">Enroll</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_training">Training</string>
    <string name="confirmation">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">start</string>
    <string name="welcome">Welcome to Farm Connect</string>
    <string name="name_required">Name Required</string>
    <string name="phone_correct">Enter Correct Phone Number</string>
    <string name="please_select_area">Please Select area</string>
    <string name="exp_lect">Trusted Merchants</string>
    <string name="slide_1_desc">Daily updates with place, photo and time will be getting and Events with Date and place details will be shared</string>
    <string name="slide_2_title">Timely Payment</string>
    <string name="slide_2_desc">Users can enroll for job requirement and we will be recommend right and vacant job for you </string>
    <string name="slide_3_title">Trusted Merchants </string>
    <string name="slide_3_desc">Users can get train from the app content to improve communication skills and other skills required for employment</string>
    <string name="slide_4_title">No Commission</string>
    <string name="slide_4_desc">Training and other details related to training will be given to the users they can utilize the information shared </string>
    <string name="later_you_can_change">Later you can change your Language</string>
    <string name="kannada">Kannada</string>
    <string name="engish">English</string>
    <string name="continu">Continue</string>
    <string name="interest">Area of Interest</string>
    <string name="register">Register</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="name">Name</string>
    <string name="uid">Aadhar No.</string>

    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="dept">Department</string>
    <string name="title">Title</string>
    <string name="quali">Qualification</string>
    <string name="noti_date">Notification Date:</string>
    <string name="last_date">Last Date:</string>
    <string name="exam_mode">Exam mode</string>
    <string name="payment">Payment Type:</string>
    <string name="documents">Documents;</string>
    <string name="exam_date">Exam Date:</string>
    <string name="no_post">No of Post:</string>
    <string name="website">Website:</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="qualification">Qualification</string>

    <string name="mode_of_exam">Mode of Exam</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="no_of_post">No of Posts</string>
    <string name="eligibiltiy">Eligibility:</string>
    <string name="attempts">Age Limit and Attempts</string>
    <string name="syllabus">Syllabus:</string>
    <string name="tq">Taluk</string>
    <string name="dist">District</string>
    <string name="scan_uid">Scan Aadhar</string>
    <string name="submit">Submit</string>
    <string name="curr_stay">Are you living presently in tanda?</string>
    <string name="news_title_en">News Title in English</string>
    <string name="news_desc_en">News Desc in English</string>

    <string name="news_title_kn">News Title in Kannada</string>
    <string name="news_desc_kn">News Desc in Kannada</string>
    <string name="place">Enter Place in Kannada</string>
    <string name="place_en">Enter place in English</string>
    <string name="news">News</string>
    <string name="email_correct">Enter Correct Email</string>
    <string name="something_wrong">Something Wrong Please try after some time</string>
    <string name="language">Select Language</string>
    <string name="invalid">invalid credential or not registered</string>
    <string name="signup">Not Registered? click here</string>
    <string name="sigin">have you registered? click here</string>
    <string name="all_mandatory">All Fields are mandatory</string>
    <string name="other_place">Residing Place</string>
    <string name="Select_Taluk">Select Taluk</string>
    <string name="Select_Tanda">Select Village</string>
    <string name="Select_District">Select District</string>
    <string name="select_desired_job">Select Desired Job</string>
    <string name="select_qual">Select Qualification</string>
    <string name="upload_image">uplaod image</string>
    <string name="event_place">Place:</string>
    <string name="title_soft_skill">Soft Skill</string>
    <string name="no_data">No data found</string>
    <string name="conf_message">Are you sure want to change Language?</string>
    <string name="communicate">communicate</string>
    <string name="enter_aadhar">Enter 12 digit Aadhar number</string>
    <string name="save_success">Data Saved Successfully, we will get you job updates</string>
    <string name="duplicate_aadhar">Already Registered with this Aadhar</string>
    <string name="duplicate_mobile">Already Registered with this Phone number</string>
    <string name="noofbids">No of Bids:</string>
    <string name="qty">Quantity:</string>
    <string name="status">Status:</string>
    <string name="harvesting_time">Harvesting Time:</string>
    <string name="your_price">Your Price</string>
    <string name="bidder_price">Bidder Price</string>
    <string name="farmer">Farmer</string>
    <string name="merchant">Merchant</string>
    <string name="title_activity_merchant_main">MerchantMainActivity</string>
    <string name="farmer_name">Farmer Name:</string>
    <string name="farmer_location">Farmer Location:</string>
    <string name="top_bid">Highest Bid:</string>
    <string name="bid_now">bid now</string>
    <string name="expiry_time">Expiry Time:</string>
    <string name="minbid">Minimum Bid per Quintal:</string>
    <string name="current_bid">Current Bid:</string>
    <string name="location">Crop Location:</string>
    <string name="live_auction">Live Auction</string>
    <string name="crop_name">Crop Name</string>
    <string name="quantity">Quantity in Quintal</string>
    <string name="min_quantity">Minimum Quantity in Quintal</string>
    <string name="harvesting_date">Estimated Harvesting Date(dd/mm/yyyy)</string>
    <string name="bid_success">Bid Success</string>
    <string name="dist_cnt_emty">Please select district</string>
    <string name="taluk_cnt_emty">Please select Taluk</string>
    <string name="hobli_cnt_emty">Please select Hobli</string>
    <string name="gp_cnt_emty">Please select Grama Panchayat</string>
    <string name="village_cnt_emty">Please select Village</string>
    <string name="no_inetrnet">Please check your internet</string>
    <string name="valid_otp">Enter Valid OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_OTP">Resend OTP</string>
    <string name="otp_sent">OTP Sent Via SMS To</string>
    <string name="added_crop">Added crop data</string>
    <string name="crop_loc">Crop Location</string>
    <string name="Enter_your_bid">Enter Your Bid</string>
    <string name="current_price">Your Bidding price should be grate than Current Price</string>
    <string name="your_bid_posted_success">Your bid posted Successfully</string>
    <string name="greater_than_farmer_price">Your bid should be greater than Minimum bid</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="Rs">\u20B9</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="continue_for_payment">Get Details</string>
    <string name="direction">Direction</string>
    <string name="crop_location">Location</string>
    <string name="crop_dist">District</string>
    <string name="crop_details"><u>Crop Details</u></string>
    <string name="farmer_details"><u>Farmer Details</u></string>
    <string name="farmer_price">Farmer Price:</string>
    <string name="dont_have_crop">Don\'t have active crops in list, Please add by tapping on plus con</string>
    <string name="_no_crops_in_live_auction">No crops available for Live Auction please wait we will get you soon.</string>
    <string name="minimum_order">Minimum Order</string>
    <string name="minimum_order_should_be_order">Minimum Order should be ordered</string>
    <string name="login_as_merchant">Login as merchant</string>
    <string name="login_as_farmer">Login as farmer</string>

</resources>
