<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home_1"
        android:name="com.patelheggere.farmconnect.activity.farmermain.ui.gallery.GalleryFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_farmer" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.patelheggere.farmconnect.activity.farmermain.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_farmer_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.patelheggere.farmconnect.activity.farmermain.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow_farmer" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.patelheggere.farmconnect.activity.farmermain.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools_farmer" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.patelheggere.farmconnect.activity.farmermain.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share_farmer" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.patelheggere.farmconnect.activity.farmermain.ui.send.SendFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_send_farmer" />
</navigation>